--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "Sample Elm Application for DDD North 2017",
   "main": "app.js",
   "author": "James Murphy <james@recumbent.co.uk>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "json-server": "^0.12.0"
+  }
 }
